tests/typechecker/should_fail/map3.csp
test6 = Map({}, {\ _ @ STOP})
